--- a/CalculatorEngine.Test/CalculatorEngine.Test.csproj
+++ b/CalculatorEngine.Test/CalculatorEngine.Test.csproj
@@ -56,8 +56,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConstantTokenComparer.cs" />
+    <Compile Include="EqualityComparer.cs" />
+    <Compile Include="InfixConverterTests.cs" />
     <Compile Include="NodeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TokenParserTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
