--- a/CalculatorEngine.Test/CalculatorEngine.Test.csproj
+++ b/CalculatorEngine.Test/CalculatorEngine.Test.csproj
@@ -59,9 +59,12 @@
     <Compile Include="ConstantTokenComparer.cs" />
     <Compile Include="EqualityComparer.cs" />
     <Compile Include="InfixConverterTests.cs" />
+    <Compile Include="NodeComparer.cs" />
     <Compile Include="NodeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TokenComparer.cs" />
     <Compile Include="TokenParserTests.cs" />
+    <Compile Include="TreebuilderTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
